--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,9 @@
 		"moduleResolution": "NodeNext",
 		"target": "ESNext",
 		"sourceMap": true,
-		"outDir": "dist"
+		"outDir": "./dist",
+		"skipLibCheck": true
 	},
-
+	"exclude": ["node_modules"],
 	"include": ["src/**/*.ts"]
 }
