--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"type": "module",
 	"scripts": {
 		"start": "node ./dist/index.js",
-		"dev": "nodemon ./src/index.ts",
+		"dev": "bun run --hot ./src/index.ts",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "tsc"
 	},
